add setting in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,6 +19,7 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 setw -g aggressive-resize on
+
 # # ==========================
 # # ===    Colorscheme     ===
 # # ==========================
@@ -26,11 +27,34 @@ setw -g aggressive-resize on
 # set -g message-command-style fg='colour222',bg='colour238'
 # set -g pane-border-style fg='colour238'
 # set -g pane-active-border-style fg='colour154'
-# 
+
 # set-option -g status-style                 fg=colour15
 # set-option -g pane-border-style            fg=green
 # set-option -g pane-active-border-style     fg=yellow
 # set-option -g window-status-activity-style fg=colour111
+
+# set the status line's colors
+set -g status-fg white
+set -g status-bg black
+
+setw -g window-status-fg cyan
+setw -g window-status-bg default
+setw -g window-status-attr dim
+
+setw -g window-status-style fg=cyan  # 活动窗口颜色为蓝绿色
+
+setw -g window-status-current-fg white
+setw -g window-status-current-bg cyan
+setw -g window-status-current-attr bright
+
+# Status line left side
+set -g status-left-length 100
+# set -g status-left "#[fg=green] #[fg=yellow]#I #[fg=cyan]#P"
+set -g status-left "#[fg=green,bg=black] #[fg=cyan]#I | "
+# Status line right side
+# 15% | 28 Nov 18:15
+set -g status-right-length 100
+set -g status-right "#H: #S | #[fg=cyan]%Y-%m-%d %A %R"
 
 # binds
 unbind C-b
@@ -43,6 +67,8 @@ bind '\' split-window -h -c "#{pane_current_path}"
 bind '-' split-window -v -c "#{pane_current_path}"
 bind 'v' split-window -h -c "#{pane_current_path}"
 bind 's' split-window -v -c "#{pane_current_path}"
+
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # switch window
 bind h select-pane -L
