fix bugs in alias.zsh

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,36 +23,15 @@ setw -g aggressive-resize on
 # # ==========================
 # # ===    Colorscheme     ===
 # # ==========================
-# set -g message-style fg='colour222',bg='colour238'
-# set -g message-command-style fg='colour222',bg='colour238'
-# set -g pane-border-style fg='colour238'
-# set -g pane-active-border-style fg='colour154'
-
-# set-option -g status-style                 fg=colour15
-# set-option -g pane-border-style            fg=green
-# set-option -g pane-active-border-style     fg=yellow
-# set-option -g window-status-activity-style fg=colour111
-
 # set the status line's colors
-set -g status-fg white
-set -g status-bg black
-
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
-
-setw -g window-status-style fg=cyan  # 活动窗口颜色为蓝绿色
-
-setw -g window-status-current-fg white
-setw -g window-status-current-bg cyan
-setw -g window-status-current-attr bright
+set-option -g status-style fg=white,bg=black
+set-option -g window-status-style fg=cyan,bg=default,dim # 活动窗口颜色为蓝绿色
+set-option -g window-status-current-style fg=white,bg=cyan,bright
 
 # Status line left side
 set -g status-left-length 100
-# set -g status-left "#[fg=green] #[fg=yellow]#I #[fg=cyan]#P"
 set -g status-left "#[fg=green,bg=black] #[fg=cyan]#I | "
 # Status line right side
-# 15% | 28 Nov 18:15
 set -g status-right-length 100
 set -g status-right "#H: #S | #[fg=cyan]%Y-%m-%d %A %R"
 
